--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>aulaindex</title>
+<title>Essa é a minha primeira pagina</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -45,7 +45,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">aulaindex</h1>
+<h1 class="title">Essa é a minha primeira pagina</h1>
 </div>
 
 
@@ -62,10 +62,9 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="qqqqqr-coisa" class="level2">
-<h2 class="anchored" data-anchor-id="qqqqqr-coisa">qqqqqr coisa</h2>
-<p>kjhgfccfghj</p>
-<p>llkjo dfsfssfasfafasfafafafhgre</p>
+<section id="olá-essa-é-a-minha-página-de-nº1-faz-parte-da-atividade" class="level2">
+<h2 class="anchored" data-anchor-id="olá-essa-é-a-minha-página-de-nº1-faz-parte-da-atividade">Olá, essa é a minha página de nº1, faz parte da atividade :)</h2>
+<p>espero que dê certo!</p>
 </section>
 
 </main>
