--- a/pagina2.html
+++ b/pagina2.html
@@ -64,6 +64,9 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="essa-aqui-é-a-página-2" class="level2">
 <h2 class="anchored" data-anchor-id="essa-aqui-é-a-página-2">Essa aqui é a página 2</h2>
+<p>Caso você ainda não tenha visitado a página 1, recomendo você começar lá!<br>
+<a href="https://amandabaauer.github.io/" class="uri">https://amandabaauer.github.io/</a></p>
+<p>Ou, se já visitou e quiser prosseguir: <a href="https://amandabaauer.github.io/pagina3" class="uri">https://amandabaauer.github.io/pagina3</a></p>
 </section>
 
 </main>
