--- a/pagina3.html
+++ b/pagina3.html
@@ -64,6 +64,9 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="essa-aqui-a-última-a-de-número-3" class="level2">
 <h2 class="anchored" data-anchor-id="essa-aqui-a-última-a-de-número-3">Essa aqui a última, a de número 3</h2>
+<p>Se você apareceu aqui, e quiser começar “pelo começo”<br>
+Essa é a minha página 1: <a href="https://amandabaauer.github.io/" class="uri">https://amandabaauer.github.io/</a><br>
+e essa, a página 2: <a href="https://amandabaauer.github.io/pagina3" class="uri">https://amandabaauer.github.io/pagina3</a></p>
 </section>
 
 </main>
