--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
+<p>llkk</p>
 <section id="olá-essa-é-a-minha-página-de-nº1-faz-parte-da-atividade" class="level2">
 <h2 class="anchored" data-anchor-id="olá-essa-é-a-minha-página-de-nº1-faz-parte-da-atividade">Olá, essa é a minha página de nº1, faz parte da atividade :)</h2>
 <p>espero que dê certo!</p>
 <p>se quiser visitar minha página 2: <a href="https://amandabaauer.github.io/pagina2" class="uri">https://amandabaauer.github.io/pagina2</a></p>
 <p>e a página 3: <a href="https://amandabaauer.github.io/pagina3" class="uri">https://amandabaauer.github.io/pagina3</a></p>
-<p>[clique aqui] (pagina2.html)</p>
+<p>[clique aqui] (pagina2)</p>
 </section>
 
 </main>
