--- a/pagina2.html
+++ b/pagina2.html
@@ -67,6 +67,7 @@ ul.task-list li input[type="checkbox"] {
 <p>Caso você ainda não tenha visitado a página 1, recomendo você começar lá!<br>
 <a href="https://amandabaauer.github.io/" class="uri">https://amandabaauer.github.io/</a></p>
 <p>Ou, se já visitou e quiser prosseguir: <a href="https://amandabaauer.github.io/pagina3" class="uri">https://amandabaauer.github.io/pagina3</a></p>
+<p>oioio</p>
 </section>
 
 </main>
