--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ ul.task-list li input[type="checkbox"] {
 <p>espero que dê certo!</p>
 <p>se quiser visitar minha página 2: <a href="https://amandabaauer.github.io/pagina2" class="uri">https://amandabaauer.github.io/pagina2</a></p>
 <p>e a página 3: <a href="https://amandabaauer.github.io/pagina3" class="uri">https://amandabaauer.github.io/pagina3</a></p>
-<p><a href="pagina2.html">clique aqui</a></p>
+<p><a href="pagina2.html">Página 2</a></p>
+<p><a href="C:/Users/amand/Desktop/Pendentes/Análises%20CAP3/1907n/C13%20vs%20fisio.jpeg">teste</a></p>
 </section>
 
 </main>
