--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ ul.task-list li input[type="checkbox"] {
 <p>se quiser visitar minha página 2: <a href="https://amandabaauer.github.io/pagina2" class="uri">https://amandabaauer.github.io/pagina2</a></p>
 <p>e a página 3: <a href="https://amandabaauer.github.io/pagina3" class="uri">https://amandabaauer.github.io/pagina3</a></p>
 <p><a href="pagina2.html">Página 2</a></p>
-<p><a href="C:/Users/amand/Desktop/Pendentes/Análises%20CAP3/1907n/C13%20vs%20fisio.jpeg">teste</a></p>
+<p><img src="images/IMG_0401.JPG" class="img-fluid" width="309"></p>
 </section>
 
 </main>
