--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Essa é a minha primeira pagina</title>
+<title>Tarefa 1 - Reprodutibilidade</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -45,7 +45,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Essa é a minha primeira pagina</h1>
+<h1 class="title">Tarefa 1 - Reprodutibilidade</h1>
 </div>
 
 
@@ -62,13 +62,9 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>llkk</p>
-<section id="olá-essa-é-a-minha-página-de-nº1-faz-parte-da-atividade" class="level2">
-<h2 class="anchored" data-anchor-id="olá-essa-é-a-minha-página-de-nº1-faz-parte-da-atividade">Olá, essa é a minha página de nº1, faz parte da atividade :)</h2>
-<p>espero que dê certo!</p>
-<p>se quiser visitar minha página 2: <a href="https://amandabaauer.github.io/pagina2" class="uri">https://amandabaauer.github.io/pagina2</a></p>
-<p>e a página 3: <a href="https://amandabaauer.github.io/pagina3" class="uri">https://amandabaauer.github.io/pagina3</a></p>
-<p><a href="pagina2.html">Página 2</a></p>
+<section id="seja-bem-vindoa" class="level2">
+<h2 class="anchored" data-anchor-id="seja-bem-vindoa">Seja bem vindo(a) :)</h2>
+<p>Essa é minha primeira página. Nela, vou contar um pouco sobre mim. Caso queira saber mais sobre meu pet, você pode visitar minha <a href="pagina2.html">segunda página</a>, caso você queira saber mais sobre a cidade de onde eu vim, leia sobre <a href="pagina3.html">Picada Café</a>.</p>
 <p><img src="images/IMG_0401.JPG" class="img-fluid" width="309"></p>
 </section>
 
