--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@ ul.task-list li input[type="checkbox"] {
 
 
 <section id="seja-bem-vindoa" class="level2">
-<h2 class="anchored" data-anchor-id="seja-bem-vindoa">Seja bem vindo(a) :)</h2>
-<p>Essa é minha primeira página. Nela, vou contar um pouco sobre mim. Caso queira saber mais sobre meu pet, você pode visitar minha <a href="pagina2.html">segunda página</a>, caso você queira saber mais sobre a cidade de onde eu vim, leia sobre <a href="pagina3.html">Picada Café</a>.</p>
+<h2 class="anchored" data-anchor-id="seja-bem-vindoa">Seja bem vindo(a)!</h2>
+<p>Essa é minha primeira página. Nela, vou contar um pouco sobre mim.</p>
+<p>Caso queira saber mais sobre meu pet, você pode visitar minha <a href="pagina2.html">segunda página</a>, caso você queira saber mais sobre a cidade de onde eu vim, leia sobre <a href="pagina3.html">Picada Café</a>.</p>
 <p><img src="images/IMG_0401.JPG" class="img-fluid" width="309"></p>
+<p>Prazer, meu nome é Amanda Letícia Bauer, nasci em 1998 em uma pequena cidade.</p>
 </section>
 
 </main>
