--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ ul.task-list li input[type="checkbox"] {
 <p>Essa é minha primeira página. Nela, vou contar um pouco sobre mim.</p>
 <p>Caso queira saber mais sobre meu pet, você pode visitar minha <a href="pagina2.html">segunda página</a>, caso você queira saber mais sobre a cidade de onde eu vim, leia sobre <a href="pagina3.html">Picada Café</a>.</p>
 <p><img src="images/IMG_0401.JPG" class="img-fluid" width="309"></p>
-<p>Prazer, meu nome é Amanda Letícia Bauer, nasci em 1998 em uma pequena cidade.</p>
+<p>Prazer, meu nome é Amanda Letícia Bauer, nasci em 1998 em uma pequena cidade. Desde pequena, sempre fui muito aventureira e entusiasta da natureza. Criando sapos, “descrevendo” espécies de formigas pelo fenótipo e com 3 anos, afirmava que seria bióloga.</p>
 </section>
 
 </main>
