--- a/pagina2.html
+++ b/pagina2.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>pagina2</title>
+<title>Meu pet: o Miminho</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -45,7 +45,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">pagina2</h1>
+<h1 class="title">Meu pet: o Miminho</h1>
 </div>
 
 
@@ -62,12 +62,11 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="essa-aqui-é-a-página-2" class="level2">
-<h2 class="anchored" data-anchor-id="essa-aqui-é-a-página-2">Essa aqui é a página 2</h2>
-<p>Caso você ainda não tenha visitado a página 1, recomendo você começar lá!<br>
-<a href="https://amandabaauer.github.io/" class="uri">https://amandabaauer.github.io/</a></p>
-<p>Ou, se já visitou e quiser prosseguir: <a href="https://amandabaauer.github.io/pagina3" class="uri">https://amandabaauer.github.io/pagina3</a></p>
-<p>oioio</p>
+<section id="o-mími" class="level2">
+<h2 class="anchored" data-anchor-id="o-mími">o Mími</h2>
+<p>Vim para Rio Grande em Setembro de 2023, e até minha instalação e organização da rotina, fiquei morando sozinha em um apartamento. Em abril de 2024, decidi adotar um gato (com a esperança de ser um filhote calmo).</p>
+<p>Caso você ainda não tenha visitado a <a href="pagina1.html">página 1</a>, e quiser ler um pouco sobre mim, está convidado! :)</p>
+<p>E se tiver interesse de ler um pouco <a href="pagina3">de onde eu vim</a> e um dos destinos das viagens do Mími.</p>
 </section>
 
 </main>
