--- a/pagina3.html
+++ b/pagina3.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>pagina3</title>
+<title>Picada Café</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -45,7 +45,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">pagina3</h1>
+<h1 class="title">Picada Café</h1>
 </div>
 
 
@@ -62,11 +62,9 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="essa-aqui-a-última-a-de-número-3" class="level2">
-<h2 class="anchored" data-anchor-id="essa-aqui-a-última-a-de-número-3">Essa aqui a última, a de número 3</h2>
-<p>Se você apareceu aqui, e quiser começar “pelo começo”<br>
-Essa é a minha página 1: <a href="https://amandabaauer.github.io/" class="uri">https://amandabaauer.github.io/</a><br>
-e essa, a página 2: <a href="https://amandabaauer.github.io/pagina3" class="uri">https://amandabaauer.github.io/pagina3</a></p>
+<section id="picada-café" class="level2">
+<h2 class="anchored" data-anchor-id="picada-café">Picada Café</h2>
+<p>Se você apareceu aqui, e quiser começar “pelo começo”, conto um pouco da <a href="pagina2.html">minha história</a> e sobre o <a href="pagina3.html">meu pet</a>.</p>
 </section>
 
 </main>
