--- a/pagina2.html
+++ b/pagina2.html
@@ -65,7 +65,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="o-mími" class="level2">
 <h2 class="anchored" data-anchor-id="o-mími">o Mími</h2>
 <p>Vim para Rio Grande em Setembro de 2023, e até minha instalação e organização da rotina, fiquei morando sozinha em um apartamento. Em abril de 2024, decidi adotar um gato (com a esperança de ser um filhote calmo).</p>
-<p>Caso você ainda não tenha visitado a <a href="pagina1.html">página 1</a>, e quiser ler um pouco sobre mim, está convidado! :)</p>
+<p>Caso você ainda não tenha visitado a <a href="pagina1.html">https://amandabaauer.github.io/</a>, e quiser ler um pouco sobre mim, está convidado! :)</p>
 <p>E se tiver interesse de ler um pouco <a href="pagina3">de onde eu vim</a> e um dos destinos das viagens do Mími.</p>
 </section>
 
