--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ ul.task-list li input[type="checkbox"] {
 <section id="seja-bem-vindoa" class="level2">
 <h2 class="anchored" data-anchor-id="seja-bem-vindoa">Seja bem vindo(a)!</h2>
 <p>Essa é minha primeira página. Nela, vou contar um pouco sobre mim.</p>
-<p>Caso queira saber mais sobre meu pet, você pode visitar minha <a href="pagina2.html">segunda página</a>, caso você queira saber mais sobre a cidade de onde eu vim, leia sobre <a href="pagina3.html">Picada Café</a>.</p>
 <p><img src="images/IMG_0401.JPG" class="img-fluid" width="309"></p>
-<p>Prazer, meu nome é Amanda Letícia Bauer, nasci em 1998 em uma pequena cidade. Desde pequena, sempre fui muito aventureira e entusiasta da natureza. Criando sapos, “descrevendo” espécies de formigas pelo fenótipo e com 3 anos, afirmava que seria bióloga.</p>
+<p>Prazer, meu nome é Amanda Letícia Bauer, nasci em 1998 em uma pequena cidade. Desde pequena, sempre fui muito aventureira e entusiasta da natureza. Criando sapos, “descrevendo” espécies de formigas pelo fenótipo e com 3 anos, afirmava que seria bióloga. Em 2016, ingressei na universidade para continuar minha afirmação de infância. Me formei em Licenciatura em Ciências Biológicas, em 2021. Realizei o Mestrado em Biologia na mesma universidade (Universidade do Vale do Rio dos Sinos), com término em 2023.</p>
+<p>Caso queira saber mais sobre minhas pesquisas, você pode visitar minha <a href="pagina2.html">segunda página</a>, caso você queira saber mais sobre meu <a href="pagina3.html">projeto de doutorado</a>. Vem comigo :)</p>
 </section>
 
 </main>
