--- a/pagina2.html
+++ b/pagina2.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Meu pet</title>
+<title>Minhas pesquisas</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -45,7 +45,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Meu pet</h1>
+<h1 class="title">Minhas pesquisas</h1>
 </div>
 
 
@@ -62,11 +62,11 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="o-mími-miminho-mimelote" class="level2">
-<h2 class="anchored" data-anchor-id="o-mími-miminho-mimelote">o Mími, Miminho, Mimelote</h2>
-<p>Vim para Rio Grande em Setembro de 2023, e até minha instalação e organização da rotina, fiquei morando sozinha em um apartamento. Em abril de 2024, decidi adotar um gato (com a esperança de ser um filhote calmo).</p>
+<section id="pesquisas-realizadas" class="level2">
+<h2 class="anchored" data-anchor-id="pesquisas-realizadas">Pesquisas realizadas</h2>
+<p>Vim para Rio Grande em Setembro de 2023,</p>
 <p>Caso você ainda não tenha visitado a <a href="https://amandabaauer.github.io">minha primeira página</a>, e quiser ler um pouco sobre mim, está convidado! :)</p>
-<p>E se tiver interesse de ler um pouco <a href="pagina3">de onde eu vim</a> e um dos destinos das viagens do Mími.</p>
+<p>E se tiver interesse de ler um pouco <a href="pagina3">do meu projeto de doutorado</a>, vem aqui!</p>
 </section>
 
 </main>
