--- a/pagina3.html
+++ b/pagina3.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Picada Café</title>
+<title>Projeto de Doutorado</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -45,7 +45,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Picada Café</h1>
+<h1 class="title">Projeto de Doutorado</h1>
 </div>
 
 
@@ -62,9 +62,9 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="picada-café" class="level2">
-<h2 class="anchored" data-anchor-id="picada-café">Picada Café</h2>
-<p>Se você apareceu aqui, e quiser começar “pelo começo”, conto um pouco da <a href="pagina2.html">minha história</a> e sobre o <a href="pagina3.html">meu pet</a>.</p>
+<section id="doutorado-em-biologia-de-ambientes-aquáticos-continentais" class="level2">
+<h2 class="anchored" data-anchor-id="doutorado-em-biologia-de-ambientes-aquáticos-continentais">Doutorado em Biologia de Ambientes Aquáticos Continentais</h2>
+<p>Se você apareceu aqui, e quiser começar “pelo começo”, conto um pouco da <a href="pagina2.html">minha história</a> e sobre <a href="pagina3.html">minhas pesquisas anteriores</a>.</p>
 </section>
 
 </main>
