--- a/pagina3.html
+++ b/pagina3.html
@@ -64,7 +64,8 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="doutorado-em-biologia-de-ambientes-aquáticos-continentais" class="level2">
 <h2 class="anchored" data-anchor-id="doutorado-em-biologia-de-ambientes-aquáticos-continentais">Doutorado em Biologia de Ambientes Aquáticos Continentais</h2>
-<p>Se você apareceu aqui, e quiser começar “pelo começo”, conto um pouco da <a href="pagina2.html">minha história</a> e sobre <a href="pagina3.html">minhas pesquisas anteriores</a>.</p>
+<p>Se você apareceu aqui, e quiser começar “pelo começo”, conto um pouco da <a href="amandabaauer.github.io">minha história</a> e sobre <a href="pagina2.html">minhas pesquisas anteriores</a>.</p>
+<p>O projeto de tese ainda está em planejamento, discussões e rearranjos.</p>
 </section>
 
 </main>
