--- a/pagina3.html
+++ b/pagina3.html
@@ -66,6 +66,7 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="doutorado-em-biologia-de-ambientes-aquáticos-continentais">Doutorado em Biologia de Ambientes Aquáticos Continentais</h2>
 <p>Se você apareceu aqui, e quiser começar “pelo começo”, conto um pouco da <a href="amandabaauer.github.io">minha história</a> e sobre <a href="pagina2.html">minhas pesquisas anteriores</a>.</p>
 <p>O projeto de tese ainda está em planejamento, discussões e rearranjos.</p>
+<p>Um dos capítulos no qual estou trabalhando agora, é a respeito da resposta isotópica de peixes em relação a diferentes matrizes na paisagem (matriz urbana, arenosa, com pinus e ‘normal’).</p>
 </section>
 
 </main>
