--- a/pagina3.html
+++ b/pagina3.html
@@ -97,7 +97,7 @@ window.Quarto = {
 <p>O projeto de tese ainda está em planejamento, discussões e rearranjos.</p>
 <p>Um dos capítulos no qual estou trabalhando agora, é a respeito da resposta isotópica de peixes em relação a diferentes matrizes na paisagem (matriz urbana, arenosa, com pinus e ‘normal’).</p>
 <p>```{r} minha_tabela &lt;- read.csv(“C:/Users/amand/Desktop/Bauer, Amanda/3 Doutorado em Biologia/Disciplinas/Reprodutibilidade/aula/amandabaauer.github.io/aularepro.csv”)</p>
-<p>library(knitr) kable(minha_tabela, caption = “Minha Tabela do CSV”) ’’’</p>
+<p>library(knitr) kable(minha_tabela, caption = “Minha Tabela do CSV”) ‘/’/’/</p>
 <p>A fórmula de Bhaskara é dada por:</p>
 <p><span class="math display">\[x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}\]</span></p>
 </section>
