--- a/pagina3.html
+++ b/pagina3.html
@@ -96,10 +96,40 @@ window.Quarto = {
 <p>Se você apareceu aqui, e quiser começar “pelo começo”, conto um pouco da <a href="amandabaauer.github.io">minha história</a> e sobre <a href="pagina2.html">minhas pesquisas anteriores</a>.</p>
 <p>O projeto de tese ainda está em planejamento, discussões e rearranjos.</p>
 <p>Um dos capítulos no qual estou trabalhando agora, é a respeito da resposta isotópica de peixes em relação a diferentes matrizes na paisagem (matriz urbana, arenosa, com pinus e ‘normal’).</p>
-<p>```{r} minha_tabela &lt;- read.csv(“C:/Users/amand/Desktop/Bauer, Amanda/3 Doutorado em Biologia/Disciplinas/Reprodutibilidade/aula/amandabaauer.github.io/aularepro.csv”)</p>
-<p>library(knitr) kable(minha_tabela, caption = “Minha Tabela do CSV”) ‘/’/’/</p>
-<p>A fórmula de Bhaskara é dada por:</p>
-<p><span class="math display">\[x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}\]</span></p>
+<table class="caption-top table">
+<caption>Sample grid table.</caption>
+<colgroup>
+<col style="width: 22%">
+<col style="width: 22%">
+<col style="width: 29%">
+</colgroup>
+<thead>
+<tr class="header">
+<th>Fruit</th>
+<th>Price</th>
+<th>Advantages</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Bananas</td>
+<td>$1.34</td>
+<td><ul>
+<li>built-in wrapper</li>
+<li>bright color</li>
+</ul></td>
+</tr>
+<tr class="even">
+<td>Oranges</td>
+<td>$2.10</td>
+<td><ul>
+<li>cures scurvy</li>
+<li>tasty</li>
+</ul></td>
+</tr>
+</tbody>
+</table>
+<p>Como precisa colocar uma fórmula, escolhi a mais clássica. A de Bhaskara: <span class="math display">\[x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}\]</span></p>
 </section>
 
 </main>
