--- a/pagina3.html
+++ b/pagina3.html
@@ -207,6 +207,10 @@ window.Quarto = {
 </div>
 </div>
 </div>
+<p>Lindo né?! No futuro terá mais informações!</p>
+</section>
+<section id="e-não-esquecendo-a-tarefa-completa." class="level1">
+<h1>e não esquecendo a tarefa completa….</h1>
 <p>Como precisa colocar uma fórmula, escolhi a mais clássica. A de Bhaskara: <span class="math display">\[x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}\]</span></p>
 </section>
 
