--- a/apresentacao.html
+++ b/apresentacao.html
@@ -353,8 +353,7 @@
 <h2>INTRODUÇÃO</h2>
 <p>Sangradouros são corpos d’água de pequeno porte que podem fornecer importantes habitats para a reprodução e alimentação de peixes, especialmente em regiões onde os corpos de água maiores são escassos ou degradados.</p>
 
-<img data-src="images/Imagem1.png" width="439" class="r-stretch"><p>ps aux | grep git</p>
-<div class="quarto-auto-generated-content">
+<img data-src="images/Imagem1.png" width="439" class="r-stretch"><div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
 </div>
