--- a/apresentacao.html
+++ b/apresentacao.html
@@ -378,7 +378,27 @@
 <li>PINUS</li>
 </ul>
 
-<img data-src="images/Captura%20de%20tela%202024-08-27%20152644.png" width="724" class="r-stretch"><div class="quarto-auto-generated-content">
+<img data-src="images/Captura%20de%20tela%202024-08-27%20152644.png" width="724" class="r-stretch"></section>
+<section id="objetivo" class="slide level2">
+<h2>OBJETIVO</h2>
+<ul>
+<li>Analisar se a riqueza de espécies de peixes em sangradouros varia entre diferentes fisiografias, buscando identificar padrões de diversidade associados às características físicas do ambiente.</li>
+</ul>
+</section>
+<section id="hipótese" class="slide level2">
+<h2>HIPÓTESE</h2>
+<ul>
+<li><p>Hipótese nula (H0): Não há diferença significativa na riqueza de espécies de peixes entre sangradouros localizados em diferentes fisiografias.</p></li>
+<li><p>Hipótese alternativa (H1): Há diferença significativa na riqueza de espécies de peixes entre sangradouros localizados em diferentes fisiografias.</p></li>
+</ul>
+</section>
+<section id="área-de-estudo" class="slide level2">
+<h2>ÁREA DE ESTUDO</h2>
+<p>-20 sangradouros;</p>
+<p>-Planície costeira;</p>
+<p>-2011.</p>
+
+<img data-src="images/Imagem1-01.png" class="r-stretch"><div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
 </div>
