--- a/apresentacao.html
+++ b/apresentacao.html
@@ -398,7 +398,14 @@
 <p>-Planície costeira;</p>
 <p>-2011.</p>
 
-<img data-src="images/Imagem1-01.png" class="r-stretch"><div class="quarto-auto-generated-content">
+<img data-src="images/Imagem1-01.png" class="r-stretch"></section>
+<section id="área-de-estudo-1" class="slide level2">
+<h2>ÁREA DE ESTUDO</h2>
+<p>-Rede de arrasto;</p>
+<p>-Rede quadrada;</p>
+<p>-Puçá.</p>
+
+<img data-src="images/OI.png" class="r-stretch"><div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
 </div>
