--- a/pagina3.html
+++ b/pagina3.html
@@ -127,7 +127,7 @@ window.Quarto = {
 
 <section id="doutorado-em-biologia-de-ambientes-aquáticos-continentais" class="level2">
 <h2 class="anchored" data-anchor-id="doutorado-em-biologia-de-ambientes-aquáticos-continentais">Doutorado em Biologia de Ambientes Aquáticos Continentais</h2>
-<p>Se você apareceu aqui, e quiser começar “pelo começo”, conto um pouco da <a href="amandabaauer.github.io">minha história</a> e sobre [minhas pesquisas anteriores] (https://amandabaauer.github.io/pagina2).</p>
+<p>Se você apareceu aqui, e quiser começar “pelo começo”, conto um pouco da <a href="amandabaauer.github.io">minha história</a> e sobre [minhas pesquisas anteriores] (https://amandabaauer.github.io/pagina2.html).</p>
 <p>O projeto de tese ainda está em planejamento, discussões e rearranjos.Uma breve explanação você pode encontrar <a href="https://amandabaauer.github.io/apresentacao.html">aqui</a></p>
 <p>Um dos capítulos no qual estou trabalhando agora, é a respeito da resposta isotópica de peixes em relação a diferentes matrizes na paisagem (matriz urbana, arenosa, com pinus e ‘normal’).</p>
 <div class="cell">
