--- a/apresentacao.html
+++ b/apresentacao.html
@@ -405,7 +405,10 @@
 <p>-Rede quadrada;</p>
 <p>-Puçá.</p>
 
-<img data-src="images/OI.png" class="r-stretch"><div class="quarto-auto-generated-content">
+<img data-src="images/OI.png" class="r-stretch"></section>
+<section id="análise-de-dados" class="slide level2">
+<h2>ANÁLISE DE DADOS</h2>
+<div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
 </div>
