--- a/apresentacao.html
+++ b/apresentacao.html
@@ -408,12 +408,74 @@
 <img data-src="images/OI.png" class="r-stretch"></section>
 <section id="análise-de-dados" class="slide level2">
 <h2>ANÁLISE DE DADOS</h2>
+<p>Análises no RStudio</p>
+<p>-Teste de normalidade (teste de Shapiro-Wilk);</p>
+<p>-Homogeneidade das amostras (teste de Bartlett); (X)</p>
+<ul>
+<li><p>Teste de Kruskal-Wallis;</p></li>
+<li><p>Teste post-hoc de Dunn.</p></li>
+</ul>
+</section>
+<section id="dados-descritivos-da-riqueza" class="slide level2">
+<h2>DADOS DESCRITIVOS DA RIQUEZA</h2>
+<p>Media 6.050000</p>
+<p>Mediana 4.500000</p>
+<p>Máximo 20.000000</p>
+<p>Mínimo 1.000000</p>
+<p>Amplitude 19.000000</p>
+<p>Variância 22.786842</p>
+<p>Desvio-padrão 4.773557</p>
+<p>CV(%) 78.901761</p>
+</section>
+<section id="resultados-dos-testes-de-normalidade" class="slide level2">
+<h2>RESULTADOS DOS TESTES DE NORMALIDADE</h2>
+
+<img data-src="images/Captura%20de%20tela%202024-08-31%20095311.png" width="756" class="r-stretch"></section>
+<section id="resultados-dos-testes-de-normalidade-1" class="slide level2">
+<h2>RESULTADOS DOS TESTES DE NORMALIDADE</h2>
+
+<img data-src="images/clipboard-1215266235.png" class="r-stretch"></section>
+<section id="resultados-dos-testes-de-normalidade-2" class="slide level2">
+<h2>RESULTADOS DOS TESTES DE NORMALIDADE</h2>
+
+<img data-src="images/clipboard-823419476.png" class="r-stretch"></section>
+<section id="resultados-do-teste-de-homogeneidade" class="slide level2">
+<h2>RESULTADOS DO TESTE DE HOMOGENEIDADE</h2>
+<ul>
+<li>Bartlett test of homogeneity of variances</li>
+</ul>
+<p>data: riq by fisio</p>
+<ul>
+<li>Bartlett’s K-squared = Inf, df = 3, <em>p-value &lt; 2.2e-16</em></li>
+</ul>
+<p><strong>O pressuposto de homogeneidade não foi atendido.</strong></p>
+</section>
+<section id="resultados" class="slide level2">
+<h2>RESULTADOS</h2>
+
+<img data-src="images/clipboard-3487462867.png" width="875" class="r-stretch"></section>
+<section id="section" class="slide level2">
+<h2></h2>
+<ul>
+<li>Hipótese nula (H0): Não há diferença significativa na riqueza de espécies de peixes entre sangradouros localizados em diferentes fisiografias.</li>
+</ul>
+
+<img data-src="images/clipboard-4072172677.png" class="r-stretch"></section>
+<section id="discussão-e-estudos-futuros" class="slide level2">
+<h2>DISCUSSÃO E ESTUDOS FUTUROS</h2>
+
+<img data-src="images/clipboard-2290428943.png" class="r-stretch"></section></section>
+<section id="obrigada-pela-atenção" class="title-slide slide level1 center">
+<h1><sup>OBRIGADA&nbsp;PELA&nbsp;ATENÇÃO!</sup></h1>
+<p>amandaleticiabauer@hotmail.com</p>
+<p>Amanda Letícia Bauer</p>
+<p>Doutoranda em Biologia de Ambientes Aquáticos Continentais FURG - Universidade Federal de Rio Grande</p>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
 </div>
 </div>
-</section></section>
+</section>
     </div>
   </div>
 
